Adds CHANGELOG to repo

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "main": "Util.js",
   "files": [
-    "Util.js"
+    "Util.js",
+    "CHANGELOG.md"
   ],
   "scripts": {
     "test": "jest"
